[package]
name = "advent_of_code2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
nalgebra = { version = "0.33.2", features = ["macros"] }
nom = "7"
pathfinding = "4.11.0"
rayon = "1.10.0"
