[package]
name = "advent_of_code2023"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
inkwell = { version = "0.6", features = ["llvm18-1"] }
nalgebra = { version = "0.33", features = ["macros"] }
nom = "8"
pathfinding = "4"
petgraph = "0.8"
rayon = "1"

[profile.dev.package."*"]
opt-level = 3
